--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <div class= "navbar">
 <ul>
-<li><a href = "Home.html">Home</a></li><br>
+<li><a href = "index.html">Home</a></li><br>
 <li><a href = "Vision.html">Vision</a></li><br>
 <li><a href = "Academic_Programmes.html">Academic Programmes</a></li><br>
 <li><a href = "Admission_Guidelines.html">Admission Guidelines</a></li><br>
