--- a/Contact_Us.html
+++ b/Contact_Us.html
@@ -8,7 +8,8 @@
                       left:250px;}
 .header{color:#1F2B74;
  background-color:#F6E680;}
-.navbar{background-color:#DEFCFF;
+.navbar{list-style-type: none;
+ background-color:#DEFCFF;
  width:230px;
  height:100%;}
 .h{background-color:#FFF5D4}
